--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.0",
-    "tailwindcss": "^4.1.15",
+    "tailwindcss": "^3.4.15",
+    "@tailwindcss/postcss": "^4.1.15",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.1.0"
   }
