--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,43 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.5",
-    "@tanstack/react-query": "^5.62.0",
-    "@tanstack/react-query-devtools": "^5.62.0",
-    "axios": "^1.8.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.460.0",
     "next": "15.1.0",
-    "next-themes": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.0",
+    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query-devtools": "^5.62.0",
+    "next-themes": "^0.4.0",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-switch": "^1.1.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "tailwind-merge": "^2.6.0",
-    "vercel": "^48.4.1",
+    "lucide-react": "^0.460.0",
+    "axios": "^1.8.0",
+    "recharts": "^2.15.0",
+    "date-fns": "^4.1.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "typescript": "^5.7.0",
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "15.1.0",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.0"
+    "eslint": "^9.15.0",
+    "eslint-config-next": "15.1.0"
   }
 }
