--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-# Simple Production Requirements for BizBot.Store API
-# Using pre-compiled packages only
+# Production Requirements for BizBot.Store API
+# Matching the actual dependencies used in main.py
 
 # Core Framework
 fastapi==0.104.1
@@ -16,7 +16,7 @@ httpx==0.25.2
 # Environment
 python-dotenv==1.0.0
 
-# Basic Security (simplified)
+# Basic Security
 PyJWT==2.8.0
 
 # Date & Time
@@ -24,3 +24,12 @@ python-dateutil==2.8.2
 
 # Requests
 requests==2.31.0
+
+# Database (SQLite - no additional packages needed)
+# SQLite is built into Python
+
+# Optional: Redis (will fall back to in-memory if not available)
+redis==5.0.1
+
+# Optional: Advanced monitoring (will work without these)
+prometheus-client==0.19.0
