--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,14 @@
 # Production Requirements for BizBot.Store API
 # Matching the actual dependencies used in main.py
 
-# Core Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.4.2
+# Core Framework - 2025 Stable Versions
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic==2.9.2
+pydantic-settings==2.6.1
 
 # Payment Processing
-stripe==7.8.0
+stripe==11.1.1
 
 # HTTP & Forms
 python-multipart==0.0.6
@@ -28,8 +29,14 @@ requests==2.31.0
 # Database (SQLite - no additional packages needed)
 # SQLite is built into Python
 
-# Optional: Redis (will fall back to in-memory if not available)
-redis==5.0.1
+# Redis (optional - will fall back to in-memory if not available)
+redis==5.2.0
 
-# Optional: Advanced monitoring (will work without these)
-prometheus-client==0.19.0
+# Monitoring (optional)
+prometheus-client==0.21.0
+
+# Anthropic AI
+anthropic==0.39.0
+
+# Database
+psycopg2-binary==2.9.10
