--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,8 +17,9 @@ httpx==0.25.2
 # Environment
 python-dotenv==1.0.0
 
-# Basic Security
+# Security
 PyJWT==2.8.0
+bcrypt==4.2.0
 
 # Date & Time
 python-dateutil==2.8.2
