--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && rm -rf .next node_modules/.cache && npm run build",
   "devCommand": "cd frontend && npm run dev",
-  "installCommand": "cd frontend && npm install",
+  "installCommand": "cd frontend && rm -rf node_modules && npm install",
   "outputDirectory": "frontend/.next",
   "framework": "nextjs",
   "headers": [
