🔧 FIX: Set Vercel root directory to frontend
ISSUE: Vercel can't find Next.js - 'No Next.js version detected'
CAUSE: Root directory not set, Vercel looking in wrong location
SOLUTION: Set rootDirectory to 'frontend' in vercel.json

Changes:
- Add rootDirectory: 'frontend'
- Simplify build commands (no cd needed)
- Vercel will now run commands from frontend directory
- package.json will be found correctly

This is the correct Vercel monorepo configuration!

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "buildCommand": "cd frontend && rm -rf .next node_modules/.cache && npm run build",
-  "devCommand": "cd frontend && npm run dev",
-  "installCommand": "cd frontend && rm -rf node_modules && npm install",
-  "outputDirectory": "frontend/.next",
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "outputDirectory": ".next",
   "framework": "nextjs",
+  "rootDirectory": "frontend",
   "headers": [
     {
       "source": "/(.*)",
