--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,6 +42,10 @@ langchain-anthropic==0.3.0
 langchain-core==0.3.17
 langchain==0.3.7
 
+# Data Processing
+pandas==2.2.3
+numpy==2.2.1
+
 # Vector Database
 qdrant-client==1.12.1
 
